		* Exposed Cvar_ForceSet to refresh api
	* Game API version 10 (9 was used for private test build)
		* Renamed import functions to be more consistently named and the same names as the engine when applicable
		* Exposed Cmd_AddCommand and Cmd_RemoveCommand to the game dll (they were already exposed to the refresh dll)
		* Exposed MSG_Read* functions to the game to read dll from a client's network stream
		* Removed noconsole client commands and replaced with clc_event (event system described below)
	* Camera system changes:
		* The camera can now take multiple angles
		* The game now renders the view from the "vieworigin" field of pmove instead of the player origin
			* This is set based on the current camera type - camera types are defined in the Game DLL and positions are relative to the player origin
			* There are currently four camera types
				* CAMERA_TYPE_NORMAL - Normal firstperson camera
				* CAMERA_TYPE_CHASE - A third-person camera
				* CAMERA_TYPE_TOPDOWN - A top-down camera mode :^)
				* CAMERA_TYPE_FREE - A freecam (presently unimplemented)
		* Changed the flags for svc_playerinfo from short to int, as more than 16 bits were needed to pack in all of the flags
	* Refactored gamemodes
		* Each gamemode now has its own player spawn and update code
	* Changed client prediction to be based on the camera origin rather than the player's origin	
		* This is needed because the original prediction system could not distinguish between the player and the camera, leading to extremely choppy gameplay at a 10Hz tick rate when
		the player was in a non-normal camera type
	* The game now runs at 40Hz instead of 10Hz tick rate
			* This should improve hit registration and many other aspects of network play
	* A dedicated server binary, on Windows as well as Linux...
	* Added a real-time killfeed
		* It replaces death strings being printed to the chat