@@ -607,7 +607,7 @@ void SP_worldspawn(edict_t* ent)
 
 	gi.configstring(CS_CDTRACK, va("%i", ent->sounds));
 
-	gi.configstring(CS_MAXCLIENTS, va("%i", (int32_t)(maxclients->value)));
+	gi.configstring(CS_MAXCLIENTS, va("%i", (int32_t)(sv_maxclients->value)));
 
 	// status bar program
 
