@@ -122,7 +122,7 @@ extern uint8_t	is_silenced;
 
 // STUPID hack
 void Player_ProjectSource(edict_t* ent, vec3_t distance, vec3_t forward, vec3_t right, vec3_t result);
-void Weapon_Grenade_fire(edict_t* ent, bool held);
+void Weapon_Grenade_Fire(edict_t* ent, bool held);
 void Weapon_Bamfuslicator_SetType(edict_t* ent);
 
 typedef enum
@@ -572,7 +572,7 @@ extern cvar_t* bob_pitch;
 extern cvar_t* bob_roll;
 
 extern cvar_t* sv_cheats;
-extern cvar_t* maxclients;
+extern cvar_t* sv_maxclients;
 extern cvar_t* maxspectators;
 extern cvar_t* flood_msgs;
 extern cvar_t* flood_persecond;
